--- a/views/partials/listsongs.hbs
+++ b/views/partials/listsongs.hbs
@@ -3,6 +3,8 @@
     <tr>
       <th>Song</th>
       <th>Artist</th>
+      <th>Duration</th>
+      <th>Genre</th>
     </tr>
   </thead>
   <tbody>
@@ -13,6 +15,12 @@
         </td>
         <td>
           {{artist}}
+        </td>
+        <td>
+          {{duration}}
+        </td>
+        <td>
+          {{genre}}
         </td>
       </tr>
     {{/each}}
