--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,6 +1,13 @@
-{{> menu}}      
+{{> menu id="about"}}
+
 <section class="ui center aligned middle aligned segment">
-  <p>
-    About this app
-  </p>
+  <h2 class="ui header">
+    The playlist app team:
+  </h2>
+
+  <div class="ui centered cards">
+
+      {{> listdevelopers}}
+
+  </div>
 </section>
