--- a/views/partials/listdevelopers.hbs
+++ b/views/partials/listdevelopers.hbs
@@ -1,3 +1,4 @@
+{{#each songs}}
 <div class="ui card" id ="{{name}}">
   <div class="image">
     <img src="{{image}}">
@@ -18,3 +19,4 @@
     </a>
   </div>
 </div>
+{{/each}}
