👝🚅 Checkpoint ./views/dashboard.hbs:27940396/455

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,12 +1,14 @@
 {{> menu id="dashboard"}}
 
-<section class="ui segment">
-  {{#each playlists}}
-      <h2 class="ui header">
-        {{title}}
-      </h2>
-      {{> listsongs}}
-  {{/each}}
+{{#each playlists}}
+  <section class="ui segment">
+    <h2 class="ui header">
+      {{title}}
+    </h2>
+    <p> Total Duration: {{duration}} </p>
+        <a href="/playlist/{{id}}"> View </a>
+  </section>
+{{/each}}
 
   <p>
     <span id="rating"> </span>
