--- a/views/partials/listsongs.hbs
+++ b/views/partials/listsongs.hbs
@@ -5,6 +5,7 @@
       <th>Artist</th>
       <th>Duration</th>
       <th>Genre</th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -21,6 +22,9 @@
         </td>
         <td>
           {{genre}}
+        </td>
+        <td>
+          <a href="/playlist/{{../playlist.id}}/deletesong/{{id}}" class="ui tiny red button">Delete Song</a>
         </td>
       </tr>
     {{/each}}
