--- a/views/partials/listsongs.hbs
+++ b/views/partials/listsongs.hbs
@@ -30,3 +30,10 @@
     {{/each}}
   </tbody>
 </table>
+<p>
+  <span id="rating"> </span>
+</p>
+
+<button class="ui blue button" onclick="getRating()">
+  Rate it! <i class="star icon"></i>
+</button>
