--- a/views/partials/listsongs.hbs
+++ b/views/partials/listsongs.hbs
@@ -3,13 +3,12 @@
     <tr>
       <th>Song</th>
       <th>Artist</th>
-      <th>Duration</th>
       <th>Genre</th>
-      <th></th>
+      <th>Duration</th>
     </tr>
   </thead>
   <tbody>
-    {{#each songs}}
+    {{#each playlist.songs}}
       <tr>
         <td>
           {{title}}
@@ -18,22 +17,13 @@
           {{artist}}
         </td>
         <td>
-          {{duration}}
-        </td>
-        <td>
           {{genre}}
         </td>
         <td>
-          <a href="/playlist/{{../playlist.id}}/deletesong/{{id}}" class="ui tiny red button">Delete Song</a>
+          {{duration}}
         </td>
       </tr>
     {{/each}}
   </tbody>
 </table>
-<p>
-  <span id="rating"> </span>
-</p>
 
-<button class="ui blue button" onclick="getRating()">
-  Rate it! <i class="star icon"></i>
-</button>
