🛩🐟 Checkpoint ./views/dashboard.hbs:27940396/494 ./models/playlist-store.js:27940396/3104 ./views/partials/listdevelopers.hbs:27940396/1688 ./views/partials/listplaylists.hbs:27940396/392 ./views/partials/listsongs.hbs:27940396/1203 ./controllers/playlist.js:27940396/1486 ./controllers/dashboard.js:27940396/1360

--- a/views/partials/listsongs.hbs
+++ b/views/partials/listsongs.hbs
@@ -5,6 +5,7 @@
       <th>Artist</th>
       <th>Genre</th>
       <th>Duration</th>
+      <th> </th>
     </tr>
   </thead>
   <tbody>
@@ -22,8 +23,18 @@
         <td>
           {{duration}}
         </td>
+        <td>
+          <a href="/playlist/{{../playlist.id}}/deletesong/{{id}}" class="ui tiny red button">Delete Song</a>
+        </td>
       </tr>
     {{/each}}
   </tbody>
 </table>
 
+<p>
+  <span id="rating"> </span>
+</p>
+
+<button class="ui blue button" onclick="getRating()">
+  Rate it! <i class="star icon"></i>
+</button>
