--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,20 +1,5 @@
 {{> menu id="dashboard"}}
 
-{{#each playlists}}
-  <section class="ui segment">
-    <h2 class="ui header">
-      {{title}}
-    </h2>
-    <p> Total Duration: {{duration}} </p>
-        <a href="/playlist/{{id}}"> View </a>
-  </section>
-{{/each}}
-
-  <p>
-    <span id="rating"> </span>
-  </p>
-
-  <button class="ui blue button" onclick="getRating()">
-    Rate it! <i class="star icon"></i>
-  </button>
+<section class="ui segment">
+  {{> listplaylists}}
 </section>
