💄🌂 Checkpoint ./controllers/league.js:27940396/64 ./routes.js:27940396/79 ./views/league.hbs:27940396/24 ./views/dashboard.hbs:27940396/17 ./views/partials/listteams.hbs:27940396/107 ./views/partials/listleagues.hbs:27940396/62 ./controllers/dashboard.js:27940396/200

--- a/views/partials/listteams.hbs
+++ b/views/partials/listteams.hbs
@@ -9,10 +9,10 @@
     </tr>
   </thead>
   <tbody>
-    {{#each playlist.songs}}
+    {{#each league.teams}}
       <tr>
         <td>
-          {{title}}
+          {{name}}
         </td>
         <td>
           {{artist}}
@@ -24,7 +24,7 @@
           {{duration}}
         </td>
         <td>
-          <a href="/playlist/{{../playlist.id}}/deletesong/{{id}}" class="ui tiny red button">Delete Song</a>
+          <a href="/league/{{../league.id}}/deleteteam/{{id}}" class="ui tiny red button">Delete Team</a>
         </td>
       </tr>
     {{/each}}
