--- a/views/partials/listleagues.hbs
+++ b/views/partials/listleagues.hbs
@@ -1,9 +1,9 @@
-{{#each playlists}}
+{{#each leagues}}
   <section class="ui stacked segment">
     <h2 class="ui header">
-      {{title}}
+      {{name}}
     </h2>
-    <p> Total Duration: {{duration}} </p>
+    <p> Country {{country}} </p>
     <a href="/playlist/{{id}}" class="ui icon button">
       <i class="icon folder open"></i>
     </a>
