🏣📒 Checkpoint ./controllers/league.js:27940396/42 ./models/league-store.js:27940396/26 ./controllers/dashboard.js:27940396/2 ./views/dashboard.hbs:27940396/1 ./views/partials/listleagues.hbs:27940396/33 ./models/league-store.json:27940396/1479 ./views/partials/listteams.hbs:27940396/451 ./.glitch-assets:27940396/525

--- a/views/partials/listteams.hbs
+++ b/views/partials/listteams.hbs
@@ -1,7 +1,7 @@
 <table class="ui fixed striped table">
   <thead>
     <tr>
-      <th>Song</th>
+      <th>g</th>
       <th>Artist</th>
       <th>Genre</th>
       <th>Duration</th>
@@ -15,13 +15,16 @@
           {{name}}
         </td>
         <td>
-          {{artist}}
+          {{position}}
         </td>
         <td>
-          {{genre}}
+          {{manager}}
         </td>
         <td>
-          {{duration}}
+          <img
+                class="ui small circular image"
+                src="{{crest}}"
+              />
         </td>
         <td>
           <a href="/league/{{../league.id}}/deleteteam/{{id}}" class="ui tiny red button">Delete Team</a>
