--- a/views/partials/listleagues.hbs
+++ b/views/partials/listleagues.hbs
@@ -3,11 +3,11 @@
     <h2 class="ui header">
       {{name}}
     </h2>
-    <p> Country {{country}} </p>
-    <a href="/playlist/{{id}}" class="ui icon button">
+    <p> Country: {{country}} </p>
+    <a href="/league/{{id}}" class="ui icon button">
       <i class="icon folder open"></i>
     </a>
-    <a href="/dashboard/deleteplaylist/{{id}}" class="ui icon button">
+    <a href="/dashboard/deleteleague/{{id}}" class="ui icon button">
       <i class="icon trash"></i>
     </a>
   </section>
