--- a/views/partials/listteams.hbs
+++ b/views/partials/listteams.hbs
@@ -1,10 +1,10 @@
 <table class="ui fixed striped table">
   <thead>
     <tr>
-      <th>g</th>
-      <th>Artist</th>
-      <th>Genre</th>
-      <th>Duration</th>
+      <th>Club Name</th>
+      <th>League Position</th>
+      <th>Manager</th>
+      <th></th>
       <th> </th>
     </tr>
   </thead>
