🚁👴 Checkpoint ./models/league-store.json:27940396/454 ./views/partials/listteams.hbs:27940396/109 ./controllers/league.js:27940396/2

--- a/views/partials/listteams.hbs
+++ b/views/partials/listteams.hbs
@@ -22,7 +22,7 @@
         </td>
         <td>
           <img
-                class="ui small circular image"
+                class="ui small image"
                 src="{{crest}}"
               />
         </td>
@@ -38,6 +38,3 @@
   <span id="rating"> </span>
 </p>
 
-<button class="ui blue button" onclick="getRating()">
-  Rate it! <i class="star icon"></i>
-</button>
