🎿⚡️ Checkpoint ./models/league-store.json:27940396/1611 ./views/partials/listleagues.hbs:27940396/9 ./.glitch-assets:27940396/526 ./views/partials/menu.hbs:27940396/28 ./views/start.hbs:27940396/818

--- a/views/partials/listleagues.hbs
+++ b/views/partials/listleagues.hbs
@@ -12,7 +12,7 @@
       </a></p></div>
     <p class="ui center aligned six wide column">
       <img
-                class="ui medium circular image"
+                class="ui medium image"
                 src={{logo}}
               />
     </p>
