--- a/views/start.hbs
+++ b/views/start.hbs
@@ -37,28 +37,28 @@
         </div>
         <div class="ui column">
           <div class="ui grid">
-            <div class="ui eight wide column">
+            <div class="ui middle aligned eight wide column">
               <img
-                class="ui small circular image"
-                src="https://cdn.glitch.com/7d6c82ba-1aed-4e57-87c9-8a40b26e3bb7%2FAbbey%20Road.jpg?v=1611848855057"
+                class="ui small image"
+                src="https://i.imgur.com/P25gS5E.png"
               />
             </div>
-            <div class="ui eight wide column">
+            <div class="ui middle aligned eight wide column">
               <img
-                class="ui small circular image"
-                src="https://cdn.glitch.com/7d6c82ba-1aed-4e57-87c9-8a40b26e3bb7%2FSgt%20Pepper's%20Lonely%20Hearts%20Club%20Band.jpg?v=1611848862691"
+                class="ui small image"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/13/LaLiga.svg/1200px-LaLiga.svg.png"
               />
             </div>
-            <div class="ui eight wide column">
+            <div class="ui middle aligned eight wide column">
               <img
-                class="ui small circular image"
-                src="https://cdn.glitch.com/7d6c82ba-1aed-4e57-87c9-8a40b26e3bb7%2FHelp!.jpg?v=1611848873143"
+                class="ui small image"
+                src="https://upload.wikimedia.org/wikipedia/en/thumb/b/ba/Ligue_1_Uber_Eats.svg/1200px-Ligue_1_Uber_Eats.svg.png"
               />
             </div>
-            <div class="ui eight wide column">
+            <div class="ui middle aligned eight wide column">
               <img
-                class="ui small circular image"
-                src="https://cdn.glitch.com/7d6c82ba-1aed-4e57-87c9-8a40b26e3bb7%2FA%20Hard%20Day's%20Night.jpg?v=1611848878930"
+                class="ui small image"
+                src="https://upload.wikimedia.org/wikipedia/en/d/df/Bundesliga_logo_%282017%29.svg"
               />
             </div>
           </div>
