🎁🎎 Checkpoint ./views/start.hbs:27940396/289 ./views/dashboard.hbs:27940396/50 ./views/partials/listleagues.hbs:27940396/128

--- a/views/partials/listleagues.hbs
+++ b/views/partials/listleagues.hbs
@@ -1,5 +1,7 @@
 {{#each leagues}}
-  <section class="ui grid"><div class="ui center aligned middle aligned ten wide column">
+  <section class="ui segment">
+    <div class="ui grid">
+    <div class="ui center aligned middle aligned ten wide column">
     <h2 class="bold">
       {{name}}
     </h2>
@@ -16,5 +18,6 @@
                 src={{logo}}
               />
     </p>
+       </div>
   </section>
 {{/each}}
