--- a/views/start.hbs
+++ b/views/start.hbs
@@ -1,12 +1,12 @@
 
 {{> menu}}      
-<section class="ui two column grid segment">
+<section class="ui center aligned middle aligned two column grid segment">
         <div class="ui column">
-          <h1>Welcome to the Playlist App!</h1>
+          <h1>Welcome to the Football App!</h1>
 
           <p>
             This app will allow users to create and maintain a collection of
-            playlists.
+            soccer leagues.
           </p>
           <div class="buttons">
             <button class="ui blue button" onclick="showHide()">
@@ -37,25 +37,25 @@
         </div>
         <div class="ui column">
           <div class="ui grid">
-            <div class="ui middle aligned eight wide column">
+            <div class="ui center aligned middle aligned eight wide column">
               <img
                 class="ui small image"
                 src="https://i.imgur.com/P25gS5E.png"
               />
             </div>
-            <div class="ui middle aligned eight wide column">
+            <div class="ui center aligned middle aligned eight wide column">
               <img
                 class="ui small image"
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/13/LaLiga.svg/1200px-LaLiga.svg.png"
               />
             </div>
-            <div class="ui middle aligned eight wide column">
+            <div class="ui center aligned middle aligned eight wide column">
               <img
                 class="ui small image"
                 src="https://upload.wikimedia.org/wikipedia/en/thumb/b/ba/Ligue_1_Uber_Eats.svg/1200px-Ligue_1_Uber_Eats.svg.png"
               />
             </div>
-            <div class="ui middle aligned eight wide column">
+            <div class="ui center aligned middle aligned eight wide column">
               <img
                 class="ui small image"
                 src="https://upload.wikimedia.org/wikipedia/en/d/df/Bundesliga_logo_%282017%29.svg"
