🎥✈️ Checkpoint ./views/partials/listteams.hbs:27940396/2 ./views/partials/listleagues.hbs:27940396/2

--- a/views/partials/listteams.hbs
+++ b/views/partials/listteams.hbs
@@ -27,7 +27,7 @@
               />
         </td>
         <td>
-          <a href="/league/{{../league.id}}/deleteteam/{{id}}" class="ui tiny red button">Delete Team</a>
+          <a href="/league/{{../league.id}}/deleteTeam/{{id}}" class="ui tiny red button">Delete Team</a>
         </td>
       </tr>
     {{/each}}
