--- a/views/partials/listteams.hbs
+++ b/views/partials/listteams.hbs
@@ -27,7 +27,7 @@
               />
         </td>
         <td>
-          <a href="/league/{{../league.id}}/deleteTeam/{{id}}" class="ui tiny red button"><i class="icon trash"></i></a>
+          <a href="/league/{{../league.id}}/deleteteam/{{id}}" class="ui tiny red button"><i class="icon trash"></i></a>
         </td>
       </tr>
     {{/each}}
