--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>{{title}}</title>
@@ -11,8 +10,7 @@
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css">
-     <!-- import the Query javascript files -->
-   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
   </head>  
 
   <body>
@@ -20,9 +18,15 @@
     <section class="ui container">
       {{{body}}}
     </section>
-    <!-- import the SemanticUI javascript files -->
-
+    <!-- import the SemanticUI and jQuery javascript files -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 
     <!-- import the Handlebars javascript files -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.1/handlebars.min.js"></script>
+
+    <!-- import the webpage's javascript file -->
+    <script src="/script.js"></script>
+
+  </body>
+</html>
