--- a/views/partials/addleague.hbs
+++ b/views/partials/addleague.hbs
@@ -7,5 +7,9 @@
     <label>Country</label>
     <input placeholder="Country" type="text" name="country" autofocus required>
   </div>
+    <div class="field">
+    <label>League Logo</label>
+    <input placeholder="Logo URL" type="text" name="logo" autofocus required>
+  </div>
   <button class="ui blue submit button">Add Playlist</button>
 </form>
