--- a/views/partials/listteams.hbs
+++ b/views/partials/listteams.hbs
@@ -38,3 +38,6 @@
   <span id="rating"> </span>
 </p>
 
+<button class="ui blue button" onclick="getRating()">
+  Rate it! <i class="star icon"></i>
+</button>
