🌊🗽 Checkpoint ./views/partials/addteam.hbs:27940396/22 ./views/partials/addleague.hbs:27940396/14 ./public/style.css:27940396/157

--- a/views/partials/addleague.hbs
+++ b/views/partials/addleague.hbs
@@ -11,5 +11,5 @@
     <label>League Logo</label>
     <input placeholder="Logo URL" type="text" name="logo" autofocus required>
   </div>
-  <button class="ui blue submit button">Add Playlist</button>
+  <button class="ui blue submit button">Add League</button>
 </form>
