--- a/views/partials/addteam.hbs
+++ b/views/partials/addteam.hbs
@@ -16,10 +16,10 @@
       placeholder="Manager"  >
     </div>
     <div class="field">
-      <label for="image">Image URL</label>
+      <label for="image">Crest</label>
       <input type="text" name="crest" required title = "Please include a valid URL"
       placeholder="Image URL"  >
     </div>
   </div>
-  <button class="ui blue submit button">Add Song</button>
+  <button class="ui blue submit button">Add Team</button>
 </form>
