🌄🌃 Checkpoint ./public/style.css:27940396/103 ./views/about.hbs:27940396/14 ./.glitch-assets:27940396/596 ./models/developer-store.json:27940396/258 ./models/league-store.json:27940396/269

--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,7 @@
 body {
   font-family: helvetica, arial, sans-serif;
   margin: 2em;
-  background-image: url("https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX1529312.jpg");
+  background-color:lightgrey;
 }
 
 h1 {
