🚉🌲 Checkpoint ./views/partials/listleagues.hbs:27940396/4

--- a/views/partials/listleagues.hbs
+++ b/views/partials/listleagues.hbs
@@ -5,7 +5,7 @@
     <h2 class="bold">
       {{name}}
     </h2>
-    <p > <span class = "bold"> Country: </span>{{country}} 
+    <p > <span class = "bold"> Country: </span>{{country}} <br>
     <a href="/league/{{id}}" class="ui icon button">
       <i class="icon folder open"></i>
     </a>
