🍝🏏 Checkpoint ./public/style.css:27940396/320 ./views/partials/listleagues.hbs:27940396/162

--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,8 @@
 body {
   font-family: helvetica, arial, sans-serif;
   margin: 2em;
-  background-color:lightgrey;
+    background-image: repeating-linear-gradient(to right,red, orange);
+
 }
 
 h1 {
