--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,6 +1,8 @@
 {{> menu id="dashboard"}}
 
 <section class="ui segment">
+  <div class="ui grid">
   {{> listleagues}}
+  </div>
   {{> addleague}}
 </section>
