💡🐣 Checkpoint ./public/style.css:27940396/112 ./views/partials/listleagues.hbs:27940396/197

--- a/views/partials/listleagues.hbs
+++ b/views/partials/listleagues.hbs
@@ -13,14 +13,12 @@
     </a>
     <a href="/dashboard/deleteleague/{{id}}" class="ui icon button">
       <i class="icon trash"></i>
-      </a></p></div>
-    <p class="ui center aligned middle aligned sixteen wide column"">
+      </a></p>
       <img
                 class="ui medium image"
                 src={{logo}}
               />
-    </p>
-                                         
+                  </div>                       
     </div>
        </div>
   </section>
