🏚⛲️ Checkpoint ./views/partials/listleagues.hbs:27940396/671

--- a/views/partials/listleagues.hbs
+++ b/views/partials/listleagues.hbs
@@ -3,7 +3,7 @@
 <div class="ui segment">
 
     <div class="ui grid">
-    <div class="ui center aligned middle aligned sixteen wide column">
+    <div class="ui center aligned sixteen wide column">
     <h2 class="bold">
       {{name}}
     </h2>
@@ -14,10 +14,11 @@
     <a href="/dashboard/deleteleague/{{id}}" class="ui icon button">
       <i class="icon trash"></i>
       </a></p>
+      <br>
       <img
-                class="ui medium image"
-                src={{logo}}
-              />
+      class="ui medium image"
+      src={{logo}}
+      />
                   </div>                       
     </div>
        </div>
