--- a/views/partials/addteam.hbs
+++ b/views/partials/addteam.hbs
@@ -1,5 +1,5 @@
 <form class="ui stacked segment form" action="/league/{{league.id}}/addteam" method="POST">
-  <div class="four fields">
+  <div class="two fields">
     <div class="field">
       <label for="title">Name</label>
       <input type="text" name="title" autofocus required title = "Please include a valid Name"
@@ -10,6 +10,8 @@
       <input type="text" name="position" required title = "Please include a valid Position"
       placeholder="Position"  >
     </div>
+     </div>
+  <div class="two fields">
     <div class="field">
       <label for="manager">Manager</label>
       <input type="text" name="manager" required title = "Please include a valid Manager"
@@ -21,5 +23,6 @@
       placeholder="Image URL"  >
     </div>
   </div>
-  <button class="ui blue submit button">Add Team</button>
+ 
+  <button class="ui green submit button">Add Team</button>
 </form>
