--- a/views/partials/listleagues.hbs
+++ b/views/partials/listleagues.hbs
@@ -16,7 +16,7 @@
       </a></p>
       <br>
       <img
-      class="ui medium image"
+      class="ui centered medium image"
       src={{logo}}
       />
                   </div>                       
