--- a/views/start.hbs
+++ b/views/start.hbs
@@ -39,25 +39,25 @@
           <div class="ui grid">
             <div class="ui center aligned middle aligned eight wide column">
               <img
-                class="ui small image"
+                class="ui centered small image"
                 src="https://i.imgur.com/P25gS5E.png"
               />
             </div>
             <div class="ui center aligned middle aligned eight wide column">
               <img
-                class="ui small image"
+                class="ui centered small image"
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/13/LaLiga.svg/1200px-LaLiga.svg.png"
               />
             </div>
             <div class="ui center aligned middle aligned eight wide column">
               <img
-                class="ui small image"
+                class="ui centered small image"
                 src="https://upload.wikimedia.org/wikipedia/en/thumb/b/ba/Ligue_1_Uber_Eats.svg/1200px-Ligue_1_Uber_Eats.svg.png"
               />
             </div>
             <div class="ui center aligned middle aligned eight wide column">
               <img
-                class="ui small image"
+                class="ui centered small image"
                 src="https://upload.wikimedia.org/wikipedia/en/d/df/Bundesliga_logo_%282017%29.svg"
               />
             </div>
