🌮📫 Checkpoint ./views/dashboard.hbs:27940396/36 ./views/partials/listteams.hbs:27940396/9 ./views/about.hbs:27940396/406

--- a/views/partials/listteams.hbs
+++ b/views/partials/listteams.hbs
@@ -22,7 +22,7 @@
         </td>
         <td>
           <img
-                class="ui small image"
+                class="ui centered small image"
                 src="{{crest}}"
               />
         </td>
