--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,5 +1,5 @@
 <nav class="ui menu">
-  <header class="ui header item"> <a href="/">Football Leagues</a></header>
+  <header class="ui header item"> <a href="/"> <i class="volleyball ball icon"></i>Football Leagues</a></header>
   <div class="right menu">
     <a id="dashboard" class="item" href="/dashboard"> Dashboard </a>
     <a id="about" class="item" href="/about"> About</a>
