🚥🛥 Checkpoint ./views/partials/addteam.hbs:27940396/10 ./models/league-store.json:27940396/28 ./views/league.hbs:27940396/118 ./views/partials/listteams.hbs:27940396/7544 ./views/partials/addleague.hbs:27940396/400

--- a/views/partials/addleague.hbs
+++ b/views/partials/addleague.hbs
@@ -1,4 +1,5 @@
 <form class="ui stacked segment form" action="/dashboard/addleague" method="POST">
+  <div class="two fields">
   <div class="field">
     <label>League Name</label>
     <input placeholder="Name" type="text" name="name" autofocus required>
@@ -11,5 +12,9 @@
     <label>League Logo</label>
     <input placeholder="Logo URL" type="text" name="logo" autofocus required>
   </div>
+    <div class = "field">
+      <input type="radio" name="continent" value="europe">
+    </div>
+      </div>
   <button class="ui blue submit button">Add League</button>
 </form>
