--- a/views/partials/addteam.hbs
+++ b/views/partials/addteam.hbs
@@ -7,7 +7,7 @@
     </div>
     <div class="field">
       <label for="position">Position</label>
-      <input type="text" name="position" required title = "Please include a valid Position"
+      <input type="number" name="position" required title = "Please include a valid Position"
       placeholder="Position"  >
     </div>
      </div>
