--- a/views/partials/listteams.hbs
+++ b/views/partials/listteams.hbs
@@ -1,4 +1,4 @@
-<table class="ui fixed striped table">
+<table class="ui fixed sortable striped table">
   <thead>
     <tr>
       <th>Club Name</th>
@@ -14,7 +14,7 @@
         <td>
           {{name}}
         </td>
-        <td>
+        <td class="sorted descending">
           {{position}}
         </td>
         <td>
