🎌🍦 Checkpoint ./views/partials/addleague.hbs:27940396/1197

--- a/views/partials/addleague.hbs
+++ b/views/partials/addleague.hbs
@@ -8,13 +8,34 @@
     <label>Country</label>
     <input placeholder="Country" type="text" name="country" autofocus required>
   </div>
+    </div>
     <div class="field">
     <label>League Logo</label>
     <input placeholder="Logo URL" type="text" name="logo" autofocus required>
   </div>
-    <div class = "field">
+    <label >Continent of the league</label>
+  <div class="five fields">
+   <div class = "field">
+      <label>Europe</label>
       <input type="radio" name="continent" value="europe">
     </div>
-      </div>
+    <div class = "field">
+      <label>North America</label>
+      <input type="radio" name="continent" value="north america">
+    </div>
+    <div class = "field">
+      <label>South America</label>
+      <input type="radio" name="continent" value="south america">
+    </div>
+    <div class = "field">
+      <label>Asia</label>
+      <input type="radio" name="continent" value="asia">
+    </div>
+    <div class = "field">
+      <label>Oceania</label>
+      <input type="radio" name="continent" value="oceania">
+    </div>
+  </div>
+      
   <button class="ui blue submit button">Add League</button>
 </form>
