⛄️👵 Checkpoint ./models/league-store.json:27940396/177 ./views/partials/listleagues.hbs:27940396/95 ./views/partials/addleague.hbs:27940396/2222 ./controllers/dashboard.js:27940396/50 ./views/partials/addteam.hbs:27940396/177

--- a/views/partials/addleague.hbs
+++ b/views/partials/addleague.hbs
@@ -9,33 +9,22 @@
     <input placeholder="Country" type="text" name="country" autofocus required>
   </div>
     </div>
+  <div class="two fields">
+    <div class="field">
+      <label >Continent of the league</label>
+<select name="continent">
+  
+  <option value="Europe">Europe</option>
+  <option value="North America">North America</option>
+  <option value="South America">South America</option>
+  <option value="Asia">Asia</option>
+  <option value="Oceania">Oceania</option>
+  </select>
+    </div>
     <div class="field">
     <label>League Logo</label>
     <input placeholder="Logo URL" type="text" name="logo" autofocus required>
   </div>
-    <label >Continent of the league</label>
-  <div class="five fields">
-   <div class = "field">
-      <label>Europe</label>
-      <input type="radio" name="continent" value="europe">
-    </div>
-    <div class = "field">
-      <label>North America</label>
-      <input type="radio" name="continent" value="north america">
-    </div>
-    <div class = "field">
-      <label>South America</label>
-      <input type="radio" name="continent" value="south america">
-    </div>
-    <div class = "field">
-      <label>Asia</label>
-      <input type="radio" name="continent" value="asia">
-    </div>
-    <div class = "field">
-      <label>Oceania</label>
-      <input type="radio" name="continent" value="oceania">
-    </div>
-  </div>
-      
+      </div>
   <button class="ui blue submit button">Add League</button>
 </form>
