--- a/views/partials/addteam.hbs
+++ b/views/partials/addteam.hbs
@@ -23,6 +23,9 @@
       placeholder="Image URL"  >
     </div>
   </div>
+  <div class="three fields">
+    <label>Champions League</label>
+    <input type="radio" name="europeanleague"
  
   <button class="ui green submit button">Add Team</button>
 </form>
