🎃🌖 Checkpoint ./views/partials/addteam.hbs:27940396/662

--- a/views/partials/addteam.hbs
+++ b/views/partials/addteam.hbs
@@ -24,8 +24,18 @@
     </div>
   </div>
   <div class="three fields">
-    <label>Champions League</label>
-    <input type="radio" name="europeanleague"
- 
+    <div class="field">
+    <label>Champions League</label>  
+    <input type="radio" name="europeanleague" value="Champion's League">
+          </div>
+    <div class="field">
+    <label>Europa League</label>
+    <input type="radio" name="europeanleague" value="Europa League">
+          </div>
+    <div class="field">
+    <label>N/A</label>
+    <input type="radio" name="europeanleague" value="No European Football">
+    </div>
+  </div>
   <button class="ui green submit button">Add Team</button>
 </form>
