--- a/views/partials/listteams.hbs
+++ b/views/partials/listteams.hbs
@@ -6,6 +6,7 @@
       <th>Manager</th>
       <th></th>
       <th></th>
+       <th></th>
     </tr>
   </thead>
   <tbody>
@@ -19,6 +20,9 @@
         </td>
         <td>
           {{manager}}
+        </td>
+        <td>
+          {{europeanleague}}
         </td>
         <td>
           <img
