⛸😎 Checkpoint ./models/league-store.json:27940396/32867 ./views/partials/addteam.hbs:27940396/3189 ./models/developer-store.json:27940396/1967 ./views/partials/listteams.hbs:27940396/2031 ./views/partials/listleagues.hbs:27940396/1547 ./views/dashboard.hbs:27940396/276 ./views/league.hbs:27940396/418

--- a/views/partials/addteam.hbs
+++ b/views/partials/addteam.hbs
@@ -26,15 +26,15 @@
   <div class="three fields">
     <div class="field">
     <label>Champions League</label>  
-    <input type="radio" name="europeanleague" value="Champion's League">
+    <input type="radio" name="europeanleague" value="https://upload.wikimedia.org/wikipedia/en/thumb/b/bf/UEFA_Champions_League_logo_2.svg/1200px-UEFA_Champions_League_logo_2.svg.png">
           </div>
     <div class="field">
     <label>Europa League</label>
-    <input type="radio" name="europeanleague" value="Europa League">
+    <input type="radio" name="europeanleague" value="https://upload.wikimedia.org/wikipedia/en/thumb/0/03/Europa_League.svg/1200px-Europa_League.svg.png">
           </div>
     <div class="field">
     <label>N/A</label>
-    <input type="radio" name="europeanleague" value="No European Football">
+    <input type="radio" name="europeanleague" value="https://i.imgur.com/EwEBIry.png">
     </div>
   </div>
   <button class="ui green submit button">Add Team</button>
