--- a/views/partials/listleagues.hbs
+++ b/views/partials/listleagues.hbs
@@ -8,7 +8,7 @@
       {{name}}
     </h2>
     <p > <span class = "bold"> Country: </span>{{country}} <br>
-      <span class = "bold"> Continent </span>{{continent}}<br>
+      <span class = "bold"> Continent: </span>{{continent}}<br>
     <a href="/league/{{id}}" class="ui icon button">
       <i class="icon folder open"></i>
     </a>
