🎨🎫 Checkpoint ./views/start.hbs:27940396/551 ./public/script.js:27940396/96

--- a/views/start.hbs
+++ b/views/start.hbs
@@ -14,7 +14,7 @@
             </button>
             <button
               class="ui green button"
-              onclick="alert('Thanks! You\'re okay too')"
+              onclick="alert('Buy me a drink first...')"
             >
               Like it? <i class="thumbs up icon"></i>
             </button>
@@ -28,9 +28,9 @@
                 onclick="hideWelcome()"
               ></div>
               <p>
-                Over the coming months, we will add CRUD (Create, Read, Update,
-                and Delete) functionality to this app. Users will also be able
-                to create an account, log in, and upload images to the app.
+                This league app allows users to create leagues and add
+                football teams to each league. Functionality of this 
+                app may improve over the coming months?
               </p>
             </div>
           </div>
