💶😂 Checkpoint ./public/script.js:27940396/339 ./views/partials/listleagues.hbs:27940396/150

--- a/views/partials/listleagues.hbs
+++ b/views/partials/listleagues.hbs
@@ -1,4 +1,7 @@
-{{#each leagues}}
+<div id="league"
+     onclick="hideWelcomeLeague()">
+  {{#each leagues}}
+</div>
   <section class="ui center aligned middle aligned eight wide column">
 <div class="ui segment">
 
