🗃💗 Checkpoint ./views/partials/listleagues.hbs:27940396/700 ./public/script.js:27940396/86 ./views/dashboard.hbs:27940396/141

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,5 +1,11 @@
 {{> menu id="dashboard"}}
-{{> addleague}}
+<div id="league">
+<div  onclick="hideWelcomeLeague()">
+   </div>
+  {{> addleague}}
+</div>
+ 
+
 <section class="ui segment">
   <div class="ui grid">
   {{> listleagues}}
