📍📻 Checkpoint ./views/dashboard.hbs:27940396/23 ./public/style.css:27940396/114 ./public/script.js:27940396/5

--- a/public/style.css
+++ b/public/style.css
@@ -17,6 +17,12 @@ h1 {
 #welcomeuser {
   display: none;
 }
+#league {
+  display: none;
+}
+#theLeague {
+  display:none;
+}
 .bold{
   font-weight: bold;
   text-size:120%;
