--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -8,7 +8,8 @@
               Add A League! <i class="user icon"></i>
             </button>
 <div id="league">
-<div  onclick="hideWelcomeLeague()">
+<div  onclick="hideLeague()"
+     id = "theLeague">
    </div>
   {{> addleague}}
 </div>
