💁🍏 Checkpoint ./views/start.hbs:27940396/312 ./public/script.js:27940396/16 ./views/dashboard.hbs:27940396/1661 ./views/partials/addleague.hbs:27940396/721

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -4,18 +4,10 @@
    {{> menu id="dashboard"}}
 
 <section class="ui segment">
-  <button class="ui red button" onclick="showHideLeague()">
-              Add A League! <i class="user icon"></i>
-            </button>
-<div id="league">
-<div  onclick="hideLeague()"
-     id = "theLeague">
-   </div>
-  {{> addleague}}
-</div>
+ {{addleague}}
   <div class="ui grid">
   {{> listleagues}}
   </div>
 </section>
- <script src="/script.js"></script>
+
   
