--- a/views/partials/addleague.hbs
+++ b/views/partials/addleague.hbs
@@ -1,4 +1,13 @@
+   <button class="ui red button" onclick="showHideLeague()">
+              Add A League! <i class="user icon"></i>
+            </button>
+<div id="league">
+<div  onclick="hideLeague()"
+     id = "theLeague">
+   </div>
 <form class="ui stacked segment form" action="/dashboard/addleague" method="POST">
+
+
   <div class="two fields">
   <div class="field">
     <label>League Name</label>
@@ -28,3 +37,4 @@
       </div>
   <button class="ui blue submit button">Add League</button>
 </form>
+</>
