📕👸 Checkpoint ./views/partials/addleague.hbs:27940396/161 ./views/dashboard.hbs:27940396/510 ./public/style.css:27940396/388 ./public/script.js:27940396/2

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -4,7 +4,7 @@
    {{> menu id="dashboard"}}
 
 <section class="ui segment">
- {{addleague}}
+ {{> addleague}}
   <div class="ui grid">
   {{> listleagues}}
   </div>
