--- a/views/partials/addleague.hbs
+++ b/views/partials/addleague.hbs
@@ -3,7 +3,7 @@
             </button>
 <div id="league">
 <div  onclick="hideLeague()"
-     id = "theLeague">
+     id = "theleague">
    </div>
 <form class="ui stacked segment form" action="/dashboard/addleague" method="POST">
 
@@ -37,4 +37,4 @@
       </div>
   <button class="ui blue submit button">Add League</button>
 </form>
-</>
+</div>
