--- a/views/partials/addleague.hbs
+++ b/views/partials/addleague.hbs
@@ -1,10 +1,9 @@
-   <button class="ui red button" onclick="showHideLeague()">
-              Add A League! <i class="user icon"></i>
+ <button class="ui blue button" onclick="showHide()">
+              Read more <i class="arrow circle right icon"></i>
             </button>
-<div id="league">
-<div  onclick="hideLeague()"
-     id = "theleague">
-   </div>
+
+<div id="readmore">
+  
 <form class="ui stacked segment form" action="/dashboard/addleague" method="POST">
 
 
@@ -37,4 +36,5 @@
       </div>
   <button class="ui blue submit button">Add League</button>
 </form>
+  
 </div>
