🚆⛲️ Checkpoint ./views/partials/addleague.hbs:27940396/136 ./public/style.css:27940396/87 ./public/script.js:27940396/311 ./views/partials/menu.hbs:27940396/93

--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,5 +1,8 @@
 <nav class="ui menu">
   <header class="ui header item"> <a href="/"> <i class="volleyball ball icon"></i>Football Leagues</a></header>
+  <button class="ui blue button" onclick = "darkmode">
+    Darkmode?
+  </button>
   <div class="right menu">
     <a id="dashboard" class="item" href="/dashboard"> Dashboard </a>
     <a id="about" class="item" href="/about"> About</a>
