--- a/views/partials/addleague.hbs
+++ b/views/partials/addleague.hbs
@@ -1,13 +1,13 @@
-<div id = "showleaguebutton" class="ui center aligned segment" >
+
   
 
-<button class="ui blue button" onclick="showHideLeague()">
-              Add a League?<i class="arrow circle right icon"></i>
+<button class="ui fluid blue button" onclick="showHideLeague()" id="leaguebutton">
+              Add a League? <i class="arrow circle down icon"></i>
             </button>
-</div> 
+
 <div id="league">
   
-<form class="ui segment form" action="/dashboard/addleague" method="POST">
+<form class="ui center aligned segment form" action="/dashboard/addleague" method="POST">
 
 
   <div class="two fields">
