--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,6 +1,6 @@
 <nav class="ui menu">
   <header class="ui header item"> <a href="/"> <i class="volleyball ball icon"></i>Football Leagues</a></header>
-  <button class="ui blue button" onclick = "darkmode">
+  <button class="ui blue button" onclick = "darkmode()">
     Darkmode?
   </button>
   <div class="right menu">
