🍇🌱 Checkpoint ./public/script.js:27940396/1229 ./views/partials/menu.hbs:27940396/10

--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,4 +1,4 @@
-<nav class="ui menu">
+<nav class="ui menu" id="menu">
   <header class="ui header item"> <a href="/"> <i class="volleyball ball icon"></i>Football Leagues</a></header>
   <button class="ui blue button" onclick = "darkmode()">
     Darkmode?
