🍘🐫 Checkpoint ./public/script.js:27940396/1640 ./public/style.css:27940396/47

--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,7 @@
 body {
   font-family: helvetica, arial, sans-serif;
   margin: 2em;
-    background-image: repeating-linear-gradient(to right,red, orange);
+    background-image: repeating-linear-gradient(to right,lightgray, #262626);
 
 }
 
