🍭🌓 Checkpoint ./views/partials/addleague.hbs:27940396/105 ./public/script.js:27940396/27 ./views/partials/addteam.hbs:27940396/143 ./public/style.css:27940396/14 ./views/partials/menu.hbs:27940396/102

--- a/views/partials/addleague.hbs
+++ b/views/partials/addleague.hbs
@@ -12,17 +12,17 @@
 
   <div class="two fields">
   <div class="field">
-    <label>League Name</label>
+    <label for="name" class ="lbl">League Name</label>
     <input placeholder="Name" type="text" name="name" autofocus required>
   </div>
   <div class="field">
-    <label>Country</label>
+    <label for="country" class ="lbl">Country</label>
     <input placeholder="Country" type="text" name="country" autofocus required>
   </div>
     </div>
   <div class="two fields">
     <div class="field">
-      <label >Continent of the league</label>
+      <label for="continent" class ="lbl">Continent of the league</label>
 <select name="continent">
   
   <option value="Europe">Europe</option>
@@ -33,7 +33,7 @@
   </select>
     </div>
     <div class="field">
-    <label>League Logo</label>
+    <label for="logo" class ="lbl">League Logo</label>
     <input placeholder="Logo URL" type="text" name="logo" autofocus required>
   </div>
       </div>
