--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,7 +1,7 @@
 <nav class="ui menu" id="menu">
   <header class="ui header item"> <a href="/"> <i class="volleyball ball icon"></i>Football Leagues</a></header>
-  <button class="ui blue button" onclick = "darkmode()">
-    Darkmode?
+  <button class="ui red centered button" onclick = "darkmode()">
+    Toggle Darkmode
   </button>
   <div class="right menu">
     <a id="dashboard" class="item" href="/dashboard"> Dashboard </a>
