🐌💄 Checkpoint ./public/script.js:27940396/880 ./views/partials/listteams.hbs:27940396/212

--- a/views/partials/listteams.hbs
+++ b/views/partials/listteams.hbs
@@ -1,12 +1,12 @@
-<table class="ui fixed sortable striped table">
+<table class="ui fixed striped table">
   <thead>
     <tr>
-      <th>League Position</th>
-      <th>Club Name</th>
-      <th >Manager</th>
-      <th>European League</th>
-      <th>Crest</th>
-       <th></th>
+      <th class="table">League Position</th>
+      <th class="table">Club Name</th>
+      <th class="table">Manager</th>
+      <th class="table">European League</th>
+      <th class="table">Crest</th>
+       <th class="table"></th>
     </tr>
   </thead>
   <tbody>
