🎖🍙 Checkpoint ./views/about.hbs:27940396/29 ./public/script.js:27940396/3040

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,7 +1,7 @@
 {{> menu id="about"}}
 
 <section class="ui center aligned middle aligned segment">
-  <h2 class="ui header">
+  <h2 class="ui header" id="heading">
     The league app team:
   </h2>
 
