⛷🐌 Checkpoint ./models/developer-store.json:27940396/1 ./views/about.hbs:27940396/14 ./public/style.css:27940396/30 ./views/partials/menu.hbs:27940396/398

--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,9 +1,10 @@
 <nav class="ui menu" id="menu">
   <header class="ui header item"> <a href="/"> <i class="volleyball ball icon"></i>Football Leagues</a></header>
-  <button class="ui red centered button" onclick = "darkmode()">
+  <button class="ui red button" onclick = "darkmode()">
     Toggle Darkmode
   </button>
   <div class="right menu">
+    
     <a id="dashboard" class="item" href="/dashboard"> Dashboard </a>
     <a id="about" class="item" href="/about"> About</a>
   </div>
