--- a/views/about.hbs
+++ b/views/about.hbs
@@ -10,5 +10,7 @@
       {{> listdevelopers}}
 {{/each}}
   </div><br>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2054.1805543293067!2d-7.138973345891851!3d52.246178421936115!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4842c41310dd4131%3A0x4042f0dcf13f7cfe!2sWaterford%20Institute%20of%20Technology!5e0!3m2!1sen!2sie!4v1615669975939!5m2!1sen!2sie" width="600" height="450"  allowfullscreen="" loading="lazy"></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2054.1805543293067!2d-7.138973345891851!3d52.246178421936115!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4842c41310dd4131%3A0x4042f0dcf13f7cfe!2sWaterford%20Institute%20of%20Technology!5e0!3m2!1sen!2sie!4v1615669975939!5m2!1sen!2sie" 
+          width="600" height="450"  allowfullscreen="" loading="lazy">
+  </iframe>
 </section>
