🏋🐌 Checkpoint ./public/script.js:27940396/478 ./views/layouts/main.hbs:27940396/81

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="/style.css">
 
   </head>  
-
+  
   <body onload="changeBackground()">
 
-    <section class="ui container">
+    <section class="ui segment container" id = "backgroundSegment">
       {{{body}}}
     </section>
     <!-- import the SemanticUI and jQuery javascript files -->
