🍽🏮 Checkpoint ./public/script.js:27940396/1089 ./views/about.hbs:27940396/32

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,7 +1,7 @@
 {{> menu id="about"}}
 
 <section class="ui center aligned middle aligned segment">
-  <h2 class="ui header" id="heading">
+  <h2 class="ui header" id="description">
     The league app team:
   </h2>
 
