🍓🐮 Checkpoint ./views/partials/menu.hbs:27940396/826

--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,10 +1,11 @@
 <nav class="ui menu" id="menu">
   <header class="ui header item"> <a href="/"> <i class="volleyball ball icon"></i>Football Leagues</a></header>
-  <button class="ui red button" onclick = "darkmode()">
-    Toggle Darkmode
+  
+
+  <div class=" menu">
+    <button class="ui toggle green button" onclick = "darkmode()">
+    Toggle Darkmode <i class="window maximize outline icon"></i>
   </button>
-  <div class="right menu">
-    
     <a id="dashboard" class="item" href="/dashboard"> Dashboard </a>
     <a id="about" class="item" href="/about"> About</a>
   </div>
